# trx

./: .gitignore  Cargo.toml  Readme.md  TRX_Language_Guide.md
assets/: TextTRX.txt
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml  build.rs
engine/src/: builder.rs  compiler.rs  evaluator.rs  lib.rs  wasm.rs
engine/src/ast/: element.rs  mod.rs  style.rs  style_buffer.rs
engine/src/layout/: context.rs  engine.rs  mod.rs  quadtree.rs
engine/src/parser/: error.rs  expressions.rs  mod.rs
engine/src/parser/blocks/: diagram.rs  mod.rs  packet.rs  sqltable.rs  state.rs  xy.rs
engine/src/render/: mod.rs
engine/src/render/svg/: diagram.rs  mod.rs  packet.rs  sqltable.rs  state.rs  xy.rs
engine/src/utils/: mod.rs  text_metrics.rs
engine/tests/: integration.rs
layout/: Cargo.toml
layout/src/: lib.rs  physics.rs  quadtree.rs
syntax/: Cargo.toml  build.rs
syntax/src/: lib.rs  trx.pest
test/code_syntax/: all_rules.trx  example.trx  packet_test.trx  upgrade_example.trx
tests/test_by_arif/1/code_syntax/: state_machine.trx
tests/test_by_arif/1/result/: all_rules.html  all_rules.json  example.json
tests/test_by_arif/2/code_syntax/: example.trx  test10_mixed_all.trx  test1_basic_node.trx  test2_variables.trx  test3_math_expr.trx  test4_packet_simple.trx  test5_packet_complex.trx  test6_state_machine.trx  test7_xy_chart.trx  test8_diagram_flow.trx  test9_diagram_physics.trx
tests/test_by_arif/2/result/: example.json  test10_mixed_all.json  test1_basic_node.json  test2_variables.json  test3_math_expr.json  test4_packet_simple.json  test5_packet_complex.json  test6_state_machine.json  test7_xy_chart.json  test8_diagram_flow.json  test9_diagram_physics.json
tests/test_by_arif/3/code_syntax/: arch_diagram.trx  full_features.trx  layered_layout.trx  sqltable_demo.trx  state_machine.trx
tests/test_by_arif/3/result/: arch_diagram.json  full_features.json  layered_layout.json  sqltable_demo.json  state_machine.json
tests/test_by_arif/4/code/: llm_architecture.trx  massive_network.trx  sub_include.trx  test_class.trx  test_math.trx
tests/test_by_arif/5/code/: advanced_network.trx  db_cluster.trx  hybrid_system.trx  microservices_deployment.trx  packet_complex.trx
tests/test_by_arif/6/code/: complex_test.trx
tests/test_by_arif/6/result/: complex_test.json
