[workspace]
members = [
    "cli",
    "engine",
    "syntax",
    "layout",
]
resolver = "2"

[workspace.dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

kurbo = "0.10.4"
petgraph = "0.6"
smallvec = { version = "1.15.1", features = ["serde"] }
libm = "0.2.8"
console_error_panic_hook = "0.1.7"

tower-lsp = "0.20"
lsp-types = "0.95"
tokio = { version = "1.0", features = ["full"] }

trx-engine = { path = "engine" }
trx-syntax = { path = "syntax" }
trx-layout = { path = "layout" }

