[package]
name = "trx-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
trx-syntax = { workspace = true }

pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Math and Data Structures
kurbo = { workspace = true }
smallvec = { workspace = true }
petgraph = { workspace = true }
libm = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }

[dev-dependencies]
trx-layout = { workspace = true }
